# Ironclad

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
apps/: CMakeLists.txt
apps/arena_demo/: CMakeLists.txt  arena.cpp  arena.hpp  arena_udp.cpp  arena_udp.hpp  main.cpp
apps/arena_view/: CMakeLists.txt  README.md  main.cpp  render.cpp  render.hpp  studio.cpp  studio.hpp
build_fuzz/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_fuzz/apps/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_fuzz/apps/arena_demo/: CTestTestfile.cmake  Makefile  arena_demo  cmake_install.cmake
build_fuzz/src/: Makefile
build_fuzz/tests/: CTestTestfile.cmake  Makefile  fuzz_delta_decode  fuzz_packet_decode  fuzz_range_coder  fuzz_replay_parse  test_delta  test_desync  test_ecs  test_fixed  test_hash  test_lag_comp  test_netsim  test_range_coder  test_recorder  test_replay_model  test_rng  test_session_rollback  test_smoke  test_snapshot  test_soak_smoke  test_udp_transport  test_vec2
build_san/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_san/Testing/Temporary/: CTestCostData.txt
build_san/apps/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_san/apps/arena_demo/: CTestTestfile.cmake  Makefile
build_san/src/: Makefile
build_san/tests/: CTestTestfile.cmake  Makefile
cmake/: Sanitizers.cmake  Warnings.cmake
docs/: ARCHITECTURE.md  DETERMINISM.md  HARDENING.md  KPIS.md  REPLAY_STUDIO.md
include/ironclad/: byteio.hpp  components.hpp  config.hpp  delta.hpp  desync.hpp  ecs.hpp  fixed.hpp  hash.hpp  input.hpp  ironclad.hpp  lag_comp.hpp  loopback_transport.hpp  netsim.hpp  packet.hpp  range_coder.hpp  recorder.hpp  replay.hpp  rng.hpp  session.hpp  snapshot.hpp  transport.hpp  udp_transport.hpp  vec2.hpp
scripts/: make-sample.sh
src/: CMakeLists.txt  delta.cpp  desync.cpp  hash.cpp  placeholder.cpp  range_coder.cpp  recorder.cpp  replay.cpp  session.cpp  udp_transport.cpp
tests/: CMakeLists.txt  doctest_main.cpp  fuzz_delta_decode.cpp  fuzz_packet_decode.cpp  fuzz_range_coder.cpp  fuzz_replay_parse.cpp  test_delta.cpp  test_desync.cpp  test_ecs.cpp  test_fixed.cpp  test_hash.cpp  test_lag_comp.cpp  test_netsim.cpp  test_property.cpp  test_range_coder.cpp  test_recorder.cpp  test_replay_model.cpp  test_rng.cpp  test_session_rollback.cpp  test_smoke.cpp  test_snapshot.cpp  test_soak_smoke.cpp  test_stress.cpp  test_udp_transport.cpp  test_vec2.cpp
